--- a/src/04-product/components/style/ProductVideo.scss
+++ b/src/04-product/components/style/ProductVideo.scss
@@ -1,56 +1,51 @@
 main {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    letter-spacing: 2px
-  }
-  
-  $main-blue: #2B325C;
-  $main-yellow: #FAD249;
-  $main-text: #5E5E5E;
-  $secondary-blue: #113F75;
-  $secondary-yellow: #FEF3DA;
-  $green: #53B2A8;
-  $red: #ED4743;
-  $text-shadow: #E4E4E4;
-  $base-line-eight: 10px;
-  $main-border: 3px solid #113F75;
-  $main-border-radius: 8px;
-  
-  %a-flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .a-video {
-      text-align: center;
-    }
-    .a-productVideoWrapper {
-      position: relative;
-      width: 400px;
-      height: 400px;
-      margin: auto;
-      overflow: hidden;
-      border: 6px solid $main-yellow;
-      // padding: 5px;
-    }
-    video {
-      width: 100%;
-      object-fit: cover;
-    }
-    // .a-producVideo {
-    //   position: absolute;
-    //   left: -30px;
-    //   top: 0px;
-    //   z-index: 1;
-    //   background-color: $secondary-yellow;
-    //   border-radius: $main-border-radius;
-    //   width: 170px;
-    //   height: 50px;
-    //   @extend %a-flex
-    // }
-  
-    
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  letter-spacing: 2px;
+}
+
+$main-blue: #2b325c;
+$main-yellow: #fad249;
+$main-text: #5e5e5e;
+$secondary-blue: #113f75;
+$secondary-yellow: #fef3da;
+$green: #53b2a8;
+$red: #ed4743;
+$text-shadow: #e4e4e4;
+$base-line-eight: 10px;
+$main-border: 3px solid #113f75;
+$main-border-radius: 8px;
+
+%a-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.a-productVideoWrapper {
+  // position: relative;
+  width: 400px;
+  height: 400px;
+  margin: auto;
+  overflow: hidden;
+  border: 6px solid $main-yellow;
+  // padding: 5px;
+}
+video {
+  width: 100%;
+  object-fit: cover;
+}
+// .a-producVideo {
+//   position: absolute;
+//   left: -30px;
+//   top: 0px;
+//   z-index: 1;
+//   background-color: $secondary-yellow;
+//   border-radius: $main-border-radius;
+//   width: 170px;
+//   height: 50px;
+//   @extend %a-flex
+// }
