revise usersign.scss

--- a/src/05-member/style/UserSign.scss
+++ b/src/05-member/style/UserSign.scss
@@ -22,10 +22,11 @@ $s-main-b: #113f75;
   // border: 1px solid red;
 
   .s-svg-wrap {
-    width: 220px;
+    width: 250px;
+    height: 60px;
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 15px;
+    left: 40px;
 
     // display: block;
   }
