--- a/src/04-product/components/style/ProductComment.scss
+++ b/src/04-product/components/style/ProductComment.scss
@@ -4,48 +4,95 @@ main {
     margin: 0;
     padding: 0;
     list-style: none;
-    letter-spacing: 2px
-}
-$main-blue: #2B325C;
-$main-yellow: #FAD249;
-$main-text: #5E5E5E;
-$secondary-blue: #113F75;
-$secondary-yellow: #FEF3DA;
-$green: #53B2A8;
-$red: #ED4743;
-$text-shadow: #E4E4E4;
+    letter-spacing: 2px;
+  }
+$main-blue: #2b325c;
+$main-yellow: #fad249;
+$main-text: #5e5e5e;
+$secondary-blue: #113f75;
+$secondary-yellow: #fef3da;
+$main-orange: #f57d00;
+$green: #53b2a8;
+$red: #ed4743;
+$text-shadow: #e4e4e4;
 $base-line-eight: 10px;
-$main-border: 3px solid #113F75;
+$main-border: 3px solid #113f75;
 $main-border-radius: 8px;
+@function line($count: 1) {
+  @return $base-line-eight * $count;
+}
+%a-text {
+  font-size: 22px;
+  font-weight: 600;
+  color: #5e5e5e;
+  letter-spacing: 1.5px;
+}
+%a-title {
+  font-size: 22px;
+  font-weight: 600;
+  color: #2b325c;
+  letter-spacing: 1.5px;
+}
+%a-secondary-color-text {
+  font-size: 22px;
+  font-weight: 600;
+  color: #113f75;
+}
+%a-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .a-productCommentWrapper {
-    display: flex;
-    flex-direction: column;
-    width: 420px;
-    // height: 500px;
-.a-commentWrapper {
+  display: flex;
+  flex-direction: column;
+  width: 420px;
+  // height: 500px;
+  .a-commentWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
-.a-commentInput {
+    .a-commentInput {
+      width: 420px;
+      height: 80px;
+      border-radius: $main-border-radius;
+      appearance: none;
+      -moz-appearance: none;
+      border: 2px solid $secondary-blue;
+      background-color: $main-yellow;
+      text-align: center;
+      outline: none;
+    }
+    .a-sumbitButton {
+      width: 80px;
+      height: 40px;
+      background-color: #fff;
+      border: 3px solid $secondary-blue;
+      border-radius: $main-border-radius;
+      margin-top: 10px;
+    }
+  }
+}
+
+.a-productUserComment {
     width: 420px;
-    height: 80px;
-    border-radius: $main-border-radius;
-    appearance:none;
-    -moz-appearance:none;
-    border: 2px solid $secondary-blue;
-    background-color:$main-yellow;
-    text-align: center;
-    outline: none;
-}
-.a-sumbitButton {
-    width: 80px;
-    height: 40px;
-    background-color: #fff;
-    border: 3px solid $secondary-blue;
-    border-radius: $main-border-radius;
-    margin-top: 10px;
-}
-}
+    // background-color: $secondary-yellow;
+  .a-productUserContent {
+    display: flex;
+    align-items: center;
+    .a-memberPhoto {
+      width: 40px;
+      object-fit: cover;
+      @extend %a-text;
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+  .a-memberCommentWrapper {
+    height: 35px;
+  }
 }
