--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -59,7 +59,7 @@ $main-border-radius: 8px;
   position: relative;
 
   .y-go-to-top {
-    display: none;
+    display: block;
     position: fixed;
     z-index: 300;
     right: 8%;
