--- a/src/00-homepage/styles/Gachapon.scss
+++ b/src/00-homepage/styles/Gachapon.scss
@@ -1,11 +1,32 @@
 
 .r-gachapon-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   padding-bottom: 30px;
   background:url(./../../../public/03-shop-img/blueday_bg.png) no-repeat;
+  .r-gachapon-ariticle-left{
+    position: absolute;
+    bottom: 30px;
+    left: 100px;
+    font-size: 150px;
+    letter-spacing: 2rem;
+    color: rgba(255, 235, 183, 0.9);
+    font-weight: 700;
+    text-shadow: 5px 5px 10px #333;
+  }
+  .r-gachapon-ariticle-right{
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    font-size: 150px;
+    font-weight: 700;
+    letter-spacing: 1rem;
+    color: rgba(255, 235, 183, 0.9);
+    text-shadow: 5px 5px 10px #333;
+  }
   .r-mask {
     background: url(./../../../public/03-shop-img/shine.png) 50% 50%/cover no-repeat;
     position: absolute;
