--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -100,7 +100,7 @@ $border-radius-button: 8px;
 }
 
 .bgc.y-section-nav {
-  background-color: #fbfbf2;
+  background-color: rgba(251, 251, 242, 0.75);
 }
 
 @media (min-width: 391px) {
