--- a/src/04-product/components/style/ProductCard.scss
+++ b/src/04-product/components/style/ProductCard.scss
@@ -23,19 +23,19 @@ $main-border-radius: 8px;
 }
 %a-text {
   font-size: 22px;
-  font-weight: 600;
+  // font-weight: 600;
   color: #5e5e5e;
   letter-spacing: 1.5px;
 }
 %a-title {
   font-size: 22px;
-  font-weight: 600;
+  // font-weight: 600;
   color: #2b325c;
   letter-spacing: 1.5px;
 }
 %a-secondary-color-text {
   font-size: 22px;
-  font-weight: 600;
+  // font-weight: 600;
   color: #113f75;
 }
 %a-flex {
@@ -68,7 +68,7 @@ $main-border-radius: 8px;
     .a-shopInf {
       @extend %a-flex;
       .a-detailsTitle {
-         @extend %a-text
+        @extend %a-text;
       }
       .a-detailsText {
         @extend %a-text;
@@ -123,129 +123,147 @@ $main-border-radius: 8px;
     background: $main-yellow;
     width: 1400px;
     margin-bottom: 120px;
-    .a-produtCardWrapper {
-      //   width: 390px;
-      width: 28%;
-      display: flex;
-      flex-wrap: wrap;
-      margin: 10px 30px;
-      padding-top: 30px;
+  }
+}
+.a-produtCardWrapper {
+  //   width: 390px;
+  width: 28%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px 30px;
+  padding-top: 30px;
+  @media (max-width: 390px) {
+    width: 340px;
+  }
+  .a-productCardContent {
+    background-color: $secondary-yellow;
+    width: 100%;
+    @extend %a-flex;
+    flex-direction: column;
+    border: 5px solid $secondary-blue;
+    position: relative;
+    .a-discountIconWrapper {
+      position: absolute;
+      top: 52%;
+      right: -10%;
       @media (max-width: 390px) {
-        width: 340px;
-      }
-      .a-productCardContent {
-        background-color: $secondary-yellow;
-        width: 100%;
-        @extend %a-flex;
-        flex-direction: column;
-        border: $main-border;
-        position: relative;
-        .a-productImgWrapper {
-          width: 100%;
-          overflow: hidden;
-        }
-        .a-productImgWrapper img {
-          width: 100%;
-          object-fit: cover;
-          object-position: center center;
-          padding: 0;
-          aspect-ratio: 4/3;
-        }
-      }
-      .a-productCardTitle {
-        @extend %a-flex;
-        color: $main-blue;
-        font-size: 18px;
-      }
-      .a-discountIconWrapper {
-        position: absolute;
-        top: 52%;
+        top: 45%;
         right: -10%;
-        @media (max-width: 390px) {
-          top: 45%;
-          right: -10%;
+      }
+    }
+    .a-productImgWrapper {
+      width: 100%;
+      overflow: hidden;
+    }
+    .a-productImgWrapper img {
+      width: 100%;
+      object-fit: cover;
+      object-position: center center;
+      padding: 0;
+      aspect-ratio: 4/3;
+    }
+    .a-productCardTitle {
+      @extend %a-flex;
+      .a-prodcutIconWrapper {
+        display: flex;
+        .a-productText {
+          @extend %a-flex;
+          @extend %a-title;
         }
       }
-      .a-saleWrapper {
-        width: 100px;
-      }
-      .a-discountIconWrapper img {
-        width: 100%;
-        object-fit: cover;
-      }
-      .a-discountIconWrapper p {
-        font-size: 23px;
-        color: #fff;
-        position: absolute;
-        top: 35%;
-        left: 30%;
-        z-index: 1;
-      }
-      .a-productCardTitle img {
-        width: 30px;
-        padding-left: 3px;
-      }
-      .a-priceWrapper {
-        display: flex;
-        justify-content: space-around;
-        text-align: center;
-        padding: 0 0 8px 0;
-      }
-      .a-productPrice {
-        @extend %a-flex;
-        color: #5e5e5e;
-        line-height: line(2);
-        padding-right: 12px;
-        text-decoration: line-through;
-      }
-      .a-productDiscount {
-        @extend %a-flex;
-        color: $secondary-blue;
-        line-height: line(2);
-        font-weight: 500;
-      }
-      .a-productDiscount img {
-        width: 32px;
-      }
-      .a-productQuantity {
-        @extend %a-flex;
-        color: $main-text;
-      }
-      .a-quantity {
-        padding: 3px 8px;
-        margin: 0px 20px 0 5px;
-        background-color: #fff;
-        border: $main-border;
-        color: $secondary-blue;
-        font-weight: 400;
-        border-radius: $main-border-radius;
-      }
-      .a-quantity2 {
-        padding: 3px 10px;
-        margin: 0px 6px;
-        background-color: #fff;
-        border: $main-border;
-        color: $secondary-blue;
-        border-radius: $main-border-radius;
-      }
-      .a-productQuantity2 img {
-        margin-left: 6px;
-      }
-      .a-addButton {
-        width: 200px;
-        text-align: center;
-        @extend %a-flex;
-        background-color: $main-yellow;
-        color: $main-blue;
-        border: $main-border;
-        border-radius: $main-border-radius;
-        padding: 5px 20px;
-        margin: 15px 0 40px 0;
-        font-weight: 500;
-      }
-      .a-addButton img {
-        width: 35px;
-      }
+    }
+
+    .a-heart {
+      cursor: pointer;
+    }
+    .a-saleWrapper {
+      width: 100px;
+    }
+    .a-discountIconWrapper img {
+      width: 100%;
+      object-fit: cover;
+    }
+    .a-discountIconWrapper p {
+      font-size: 23px;
+      color: #fff;
+      position: absolute;
+      top: 35%;
+      left: 30%;
+      z-index: 1;
+    }
+    .a-productCardTitle img {
+      width: 30px;
+      padding-left: 3px;
+    }
+    .a-priceWrapper {
+      display: flex;
+      justify-content: space-around;
+      text-align: center;
+      padding: 0 0 8px 0;
+    }
+    .a-productPrice {
+      @extend %a-flex;
+      color: $secondary-blue;
+      line-height: 10px;
+      padding-right: 12px;
+      text-decoration: line-through;
+    }
+    .a-productDiscount {
+      @extend %a-flex;
+      color: $secondary-blue;
+      line-height: line(2);
+      font-weight: 500;
+    }
+    .a-productDiscount img {
+      width: 32px;
+    }
+    .a-productQuantity {
+      @extend %a-flex;
+      color: $main-text;
+    }
+    .a-quantity {
+      padding: 3px 8px;
+      margin: 0px 20px 0 5px;
+      background-color: #fff;
+      border: $main-border;
+      color: $secondary-blue;
+      font-weight: 400;
+      border-radius: $main-border-radius;
+    }
+    .a-quantity2 {
+      padding: 3px 10px;
+      margin: 0px 6px;
+      background-color: #fff;
+      border: $main-border;
+      color: $secondary-blue;
+      border-radius: $main-border-radius;
+    }
+    .a-productQuantity2 img {
+      margin-left: 6px;
+    }
+    .a-addButton {
+      width: 220px;
+      text-align: center;
+      @extend %a-flex;
+      background-color: $main-yellow;
+      color: $main-blue;
+      border: $main-border;
+      border-radius: $main-border-radius;
+      padding: 5px 20px;
+      margin: 15px 0 40px 0;
+      font-weight: 500;
+    }
+    .a-addButton:hover {
+      background-color: #66cfc5;
+      // border: 3px solid $main-yellow;
+      border: $main-border;
+      cursor: pointer;
+    }
+    .a-addButton:hover .a-detailsText:hover {
+      color: #fff;
+    }
+    .a-addButton img {
+      width: 35px;
     }
   }
 }
