--- a/src/04-product/components/style/ProductComment.scss
+++ b/src/04-product/components/style/ProductComment.scss
@@ -23,19 +23,19 @@ $main-border-radius: 8px;
 }
 %a-text {
   font-size: 22px;
-  font-weight: 600;
+//   font-weight: 600;
   color: #5e5e5e;
   letter-spacing: 1.5px;
 }
 %a-title {
   font-size: 22px;
-  font-weight: 600;
+//   font-weight: 600;
   color: #2b325c;
   letter-spacing: 1.5px;
 }
 %a-secondary-color-text {
   font-size: 22px;
-  font-weight: 600;
+//   font-weight: 600;
   color: #113f75;
 }
 %a-flex {
@@ -60,25 +60,43 @@ $main-border-radius: 8px;
       border-radius: $main-border-radius;
       appearance: none;
       -moz-appearance: none;
-      border: 2px solid $secondary-blue;
-      background-color: $main-yellow;
+      border: 4px solid $main-blue;
+      background-color: $secondary-yellow;
       text-align: center;
       outline: none;
     }
     .a-sumbitButton {
-      width: 80px;
-      height: 40px;
-      background-color: #fff;
+      width: 100px;
+      height: 45px;
+      background-color: $main-yellow;
       border: 3px solid $secondary-blue;
       border-radius: $main-border-radius;
-      margin-top: 10px;
+      margin-top: 20px;
+      font-size: 18px;
+      color: $secondary-blue;
+    }
+    .a-sumbitButton:hover {
+      cursor: pointer;
+      background-color: #66cfc5;
+      color: #fff;
+      border: 3px solid $secondary-blue;
     }
   }
 }
 
+
 .a-productUserComment {
     width: 420px;
+    position: relative;
     // background-color: $secondary-yellow;
+    .a-productRating {
+      position: absolute;
+      top: -205px;;
+      left: 230px;
+      font-size: 60px;
+      font-weight: 600;
+      color: $main-yellow;
+    }
   .a-productUserContent {
     display: flex;
     align-items: center;
