--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -23,19 +23,19 @@ $main-border-radius: 8px;
 }
 %a-text {
   font-size: 22px;
-  font-weight: 600;
+  // font-weight: 600;
   color: #5e5e5e;
   letter-spacing: 1.5px;
 }
 %a-title {
   font-size: 22px;
-  font-weight: 600;
+  // font-weight: 600;
   color: #2b325c;
   letter-spacing: 1.5px;
 }
 %a-secondary-color-text {
   font-size: 22px;
-  font-weight: 600;
+  // font-weight: 600;
   color: #113f75;
 }
 %a-flex {
@@ -46,11 +46,12 @@ $main-border-radius: 8px;
 
 //iconChoice
 .a-iconsWrapper {
+  margin-top: 30px;
   display: flex;
   justify-content: center;
   .a-iconAladdinWrapper {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border: 8px solid #87efbd;
     overflow: hidden;
     background-color: $secondary-blue;
@@ -64,8 +65,8 @@ $main-border-radius: 8px;
   }
 }
 .a-iconAvengersWrapper {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   border: 8px solid $secondary-blue;
   overflow: hidden;
   background-color: $main-yellow;
@@ -94,12 +95,11 @@ $main-border-radius: 8px;
       align-items: flex-end;
       flex-wrap: wrap;
       .a-categoryContentWapper {
-        @extend %a-flex;
-        flex-direction: column;
-        margin-top: 30px;
-        .a-iconSpan {
+        cursor: pointer;
+        .a-categoryFIlter {
           @extend %a-flex;
           flex-direction: column;
+          margin-top: 30px;
           .a-iconWrapper {
             width: 140px;
             height: 140px;
@@ -114,35 +114,18 @@ $main-border-radius: 8px;
               object-fit: cover;
             }
           }
-          .a-iconWrapper:hover {
-            border: 8px solid $secondary-blue;
-            background-color: $main-yellow;
-          }
-          // .a-iconWrapper {
-          //   width: 140px;
-          //   height: 140px;
-          //   border-radius: 50%;
-          //   border: 8px solid $secondary-blue;
-          //   overflow: hidden;
-          //   background-color: $main-yellow;
-          //   margin: 20px 10px 5px 10px;
-          //   @extend %a-flex;
-          //   .a-icon {
-          //     width: 100px;
-          //     object-fit: cover;
-          //   }
-          // }
-          // .a-iconWrapper:hover {
-          //   border: 8px solid #87efbd;
-          //   background-color: $secondary-blue;
-          // }
+
           .a-categoryIconWrapper {
             display: flex;
             justify-content: center;
-            // .a-categoryInput {
-            //   display: none;
-            //   background-color: transparent;
-            // }
+            .a-categoryInput {
+              display: none;
+              background-color: transparent;
+            }
+            input:checked + a-iconsWrapper {
+              border: 8px solid $secondary-blue;
+              background-color: $main-yellow;
+            }
             .a-categoryName {
               text-align: center;
               font-size: 20px;
@@ -155,6 +138,31 @@ $main-border-radius: 8px;
     }
   }
 }
+
+// .a-iconWrapper:hover {
+//   border: 8px solid $secondary-blue;
+//   background-color: $main-yellow;
+// }
+
+// .a-iconWrapper {
+//   width: 140px;
+//   height: 140px;
+//   border-radius: 50%;
+//   border: 8px solid $secondary-blue;
+//   overflow: hidden;
+//   background-color: $main-yellow;
+//   margin: 20px 10px 5px 10px;
+//   @extend %a-flex;
+//   .a-icon {
+//     width: 100px;
+//     object-fit: cover;
+//   }
+// }
+// .a-iconWrapper:hover {
+//   border: 8px solid #87efbd;
+//   background-color: $secondary-blue;
+// }
+
 .a-filterButton {
   width: 200px;
   text-align: center;
@@ -187,7 +195,7 @@ $main-border-radius: 8px;
         overflow: hidden;
         padding: 10px 0 0 15px;
         position: absolute;
-        top: -3px;
+        top: -20px;
         left: 20px;
         rotate: -20deg;
         img {
@@ -224,6 +232,12 @@ $main-border-radius: 8px;
         .a-optionWrapper:hover {
           background-color: $green;
           color: #fff;
+          cursor: pointer;
+        }
+        .a-optionWrapper .a-checkboxWrapper:hover {
+          background-color: $green;
+          color: #fff;
+          cursor: pointer;
         }
       }
     }
