--- a/src/04-product/components/style/RecommendCard.scss
+++ b/src/04-product/components/style/RecommendCard.scss
@@ -19,6 +19,23 @@ $text-shadow: #e4e4e4;
 $base-line-eight: 10px;
 $main-border: 3px solid #113f75;
 $main-border-radius: 8px;
+%a-text {
+  font-size: 22px;
+  // font-weight: 600;
+  color: #5e5e5e;
+  letter-spacing: 1.5px;
+}
+%a-title {
+  font-size: 22px;
+  // font-weight: 600;
+  color: #2b325c;
+  letter-spacing: 1.5px;
+}
+%a-secondary-color-text {
+  font-size: 22px;
+  // font-weight: 600;
+  color: #113f75;
+}
 %a-flex {
   display: flex;
   justify-content: center;
@@ -64,22 +81,26 @@ input::-webkit-inner-spin-button {
   }
 }
 
+.a-recommendContent {
+  background-color: $main-yellow;
+}
 .a-productRecommend {
   @extend %a-flex;
   background-color: $main-yellow;
   padding-bottom: 90px;
   // overflow-x: scroll;
+  // width: 1500px;
   .a-recommendContent {
     position: relative;
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
     margin: 0 10px;
     .a-recommendImgWrapper {
       border: 4px solid $secondary-blue;
       border-radius: 8px;
-      width: 180px;
-      height: 180px;
+      width: 200px;
+      height: 200px;
       overflow: hidden;
       img {
         width: 100%;
@@ -88,7 +109,7 @@ input::-webkit-inner-spin-button {
         object-position: center center;
       }
     }
-    .a-shop-slider-content {
+    .a-sliderContent {
       position: absolute;
       text-align: center;
       letter-spacing: 0.1rem;
@@ -102,17 +123,16 @@ input::-webkit-inner-spin-button {
       border: 1px solid rgba(255, 255, 255, 0.2);
       transition: 0.8s;
       border-radius: 2px;
-      .a-shop-slider-content-p {
-        font-size: 30px;
-        font-weight: 700;
+      .a-sliderProductName {
         color: #fff;
-        line-height: 4rem;
+        font-size: 20px;
+        padding-top: line(1.5) ;
       }
     }
   }
   .a-recommendContent:hover {
-    .a-shop-slider-content {
-      bottom: -120px;
+    .a-sliderContent {
+      bottom: -110px;
     }
     .productRecommend::-webkit-scrollbar-track {
       // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
