--- a/src/00-homepage/styles/RecipeCardRow.scss
+++ b/src/00-homepage/styles/RecipeCardRow.scss
@@ -34,7 +34,7 @@ $border-radius-button: 8px;
         margin-bottom: 0px;
 
         p {
-            width: 65px;
+            // width: 65px;
             position: absolute;
             font-size: 14px;
             font-weight: bold;
@@ -43,7 +43,7 @@ $border-radius-button: 8px;
             text-shadow: 1px 1px 1px $main-blue;
             top: 50%;
             left: 50%;
-            transform: translateX(-50%);
+            transform: translateX(-36%);
         }
     }
 
